# MyLilygo

./: platformio.ini
SLS/SquareLine_Project/: platformio.ini
SLS/SquareLine_Project/libraries/TFT_eSPI/: User_Setup.h
SLS/SquareLine_Project/libraries/ui/src/: filelist.txt  ui.c  ui.h
SLS/SquareLine_Project/libraries/ui/src/screens/: ui_consolescreen.c  ui_consolescreen.h  ui_mainscreen.c  ui_mainscreen.h
SLS/SquareLine_Project/ui/: pmu.cpp  pmu.h  ui.ino
SLS/__MACOSX/: .___ui_project_name__
SLS/__MACOSX/__ui_project_name__/libraries/SensorLib/src/: ._SensorBHI260AP.hpp
SLS/__MACOSX/__ui_project_name__/libraries/TFT_eSPI/: ._User_Setup_Select.h
SLS/__MACOSX/__ui_project_name__/libraries/XPowersLib/: ._.piopm
include/: LGFX_T_Display_S3_Pro.h  header.h
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h
src/: User_Setup.h  console.cpp  console.h  lv_conf.h  lv_helper.cpp  lv_helper.h  main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
src/ui/images/: ui_img_1401235292.c  ui_img_console_5653_png.c  ui_img_knob_png.c
src/ui/screens/: ui_consolescreen.c  ui_consolescreen.h  ui_keyboardscreen.c  ui_keyboardscreen.h  ui_mainscreen.c  ui_mainscreen.h  ui_midicontrolscreen.c  ui_midicontrolscreen.h
